--- a/music.html
+++ b/music.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="'en">
     <head>
-        <title>JavaJam Coffee Bar Menu</title>
+        <title>JavaJam Coffee Music</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="Javajam.css">
     </head>
@@ -16,9 +16,7 @@
             <a href="index.html">Music</a>
             <a href="index.html">Jobs</a></b>
             </nav>
-        <h2>Coffee at JavaJam</h2>
-        <img src="img/mugs.jpg" alt="Mugs"height="250" width="300" align="right">
-        <p>Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! Jain our Mug Club and get a 10% discount on each cup of coffe you purchase-- ask the barista for details</p>
+        <h2>Music at JavaJam</h2>
         <dl>
             <dt>Just Java</dt>
                 <dd>Regular house blend,decaffeinated coffee, or  a flavor of the day.</dd>
